@startuml
class twisk.monde.ActiviteRestreinte {
+ String toC()
}
class twisk.monde.GestionnaireEtapes {
+ void ajouter(Etape)
+ int nbEtapes()
+ Iterator<Etape> iterator()
+ String toString()
}
twisk.monde.GestionnaireEtapes --"*" twisk.monde.Etape
abstract class twisk.monde.Etape {
# String nom
# int num
+ void ajouterSuccesseur(Etape)
+ int nbSuccesseurs()
+ boolean estUneActivite()
+ boolean estUnGuichet()
+ Iterator<Etape> iterator()
+ String getNom()
+ int getNum()
+ {abstract}String toC()
+ GestionnaireSuccesseurs getGestsucc()
+ Etape getSucc()
+ Etape getSuccI(int)
+ {abstract}int getNbTicketSiGuichet()
+ {abstract}int getNumSem()
+ String getNomMaj()
+ boolean estUnSasEntree()
+ boolean estUnSasSortie()
}
twisk.monde.Etape--"1" twisk.monde.GestionnaireSuccesseurs
class twisk.monde.SasEntree {
- String loi
+ String toC()
+ boolean estUnSasEntree()
+ void setLoi(String)
}
class twisk.monde.Activite {
- int temps
- int ecartTemps
+ boolean estUneActivite()
+ int getTemps()
+ void setTemps(int)
+ int getEcartTemps()
+ void setEcartTemps(int)
+ String toString()
+ String toC()
+ int getNbTicketSiGuichet()
+ int getNumSem()
}
class twisk.monde.Guichet {
- int nbJetons
- int numSemaphore
+ boolean estUnGuichet()
+ int getNbJetons()
+ void setNbJetons(int)
+ int getNumSemaphore()
+ void setNumSemaphore(int)
+ String toString()
+ String toC()
+ int getNbTicketSiGuichet()
+ int getNumSem()
}
class twisk.monde.GestionnaireSuccesseurs {
- ArrayList<Etape> succ
+ void ajouter(Etape)
+ int nbEtapes()
+ Iterator<Etape> iterator()
+ Etape getSucc()
+ Etape getSuccI(int)
+ String toString()
}
twisk.monde.GestionnaireSuccesseurs --"*" twisk.monde.Etape
class twisk.monde.Monde {
+ void aCommeEntree(Etape)
+ void aCommeSortie(Etape)
+ void ajouter(Etape)
+ int nbEtapes()
+ int nbGuichets()
+ Iterator<Etape> iterator()
+ String toString()
+ String toC()
+ int getNbTicketsGuichetI(int)
+ String getNomEtapeI(int)
+ int getNumSasSortie()
+ Etape getEtapeI(int)
+ SasEntree getSasE()
}
twisk.monde.Monde--"1" twisk.monde.SasEntree
twisk.monde.Monde--"1" twisk.monde.SasSortie
twisk.monde.Monde--"1" twisk.monde.GestionnaireEtapes
class twisk.monde.SasSortie {
+ String toC()
+ boolean estUnSasSortie()
}


twisk.monde.Activite <|-- twisk.monde.ActiviteRestreinte
twisk.monde.Iterable <|.. twisk.monde.GestionnaireEtapes
twisk.monde.Iterable <|.. twisk.monde.Etape
twisk.monde.Activite <|-- twisk.monde.SasEntree
twisk.monde.Etape <|-- twisk.monde.Activite
twisk.monde.Etape <|-- twisk.monde.Guichet
twisk.monde.Iterable <|.. twisk.monde.GestionnaireSuccesseurs
twisk.monde.Iterable <|.. twisk.monde.Monde
twisk.monde.Activite <|-- twisk.monde.SasSortie
@enduml